[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-chat>=0.79.1",
    "chromadb>=0.6.3",
    "grandalf>=0.8",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-core>=0.3.45",
    "langchain-google-firestore>=0.5.0",
    "langchain-google-genai>=2.1.0",
    "langchain-mistralai>=0.2.8",
    "langchain-openai>=0.3.8",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.30",
    "langgraph-checkpoint==2.0.21",
    "langgraph-checkpoint-sqlite==2.0.6",
    "langgraph-prebuilt==0.1.7",
    "langgraph-sdk==0.1.51",
    "langsmith>=0.3.15",
    "pydantic>=2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pydot>=3.0.4",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dotenv>=1.0.1",
]
